--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
 Django>=4.2.25,<4.3
 djangorestframework>=3.16.1,<3.17
 psycopg2-binary>=2.9.9,<2.10
+requests>=2.32.5,<2.33
+apscheduler>=3.11.1,<3.12
