--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,4 @@ djangorestframework>=3.16.1,<3.17
 psycopg2-binary>=2.9.9,<2.10
 requests>=2.32.5,<2.33
 apscheduler>=3.11.1,<3.12
+django-environ>=0.12.0,<0.13
