--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 NEWSAPI_KEY=your_newsapi_key_here
 SECRET_KEY=your_django_secret_key_here
+OPENAI_API_KEY=your_openai_key_here
 DEBUG=True
 DB_HOST=db
 DB_NAME=devdb
